# Copyright 2022 Antoine Martin
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "iknite-docs"
version = "0.5.3"
description = "Documentation for iknite, the Kubernetes starter"
authors = [{ name = "Antoine Martin", email = "antoine@mrtn.fr" }]
readme = "../README.md"
requires-python = ">=3.13"
# cSpell: disable
dependencies = [
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.4.0",
  "mkdocs-glightbox>=0.5.0",
  "pymdown-extensions>=10.3.0",
  "mkdocs-mermaid2-plugin>=1.1.0",
  "mkdocs-git-revision-date-localized-plugin>=1.2.0",
  "mkdocs-git-authors-plugin>=0.7.0",
  "mdx_truly_sane_lists>=1.3,<2",
  "mkdocs-awesome-nav>=3.1.2",
  "mkdocs-open-in-new-tab>=1.0.8"
]
# cSpell: enable

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "ruff>=0.7.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
extend-select = ['Q', 'RUF100', 'C90', 'UP', 'I']
flake8-quotes = { inline-quotes = 'single', multiline-quotes = 'double' }
mccabe = { max-complexity = 15 }

[tool.ruff.format]
skip-magic-trailing-comma = false
# don't format python in docstrings, pytest-examples takes care of it
# docstring-code-format = false
quote-style = 'single'

[tool.ruff.lint.isort]
known-first-party = ["iknite_docs"]
combine-as-imports = true
